--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,11 +44,15 @@ mkdocs = "1.6.0"
 # Material for MkDocs theme
 mkdocs-material = "9.5.32"
 # Render custom markdown for version added/changed/remove notes
-mkdocs-version-annotations = "1.0.1"
+markdown-version-annotations = "1.0.1"
 # Automatic documentation from sources, for MkDocs
 mkdocstrings = "0.25.2"
 mkdocstrings-python = "1.10.8"
 griffe = "1.1.1"
+
+[tool.poetry.extras]
+all = [
+]
 
 [tool.black]
 line-length = 120
