--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ jdiff = "^0.0.6"
 ntc-templates = "^6.0.0"
 # Netutils pin is needed for https://github.com/networktocode/netutils/pull/553
 netutils = "^1.9.1"
+ttp = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
