added software version fixes

--- a/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_nxos.yml
@@ -122,3 +122,8 @@ sync_network_data:
         parser: "textfsm"
         jpath: "[*].{local_interface:local_interface, remote_interface:neighbor_interface, remote_device:neighbor_name}"
         post_processor: "{% set result = [] %}{% for cable in obj %}{% set _=result.append({'local_interface': cable['local_interface'], 'remote_interface': cable['remote_interface'], 'remote_device': cable['remote_device'] | remove_fqdn }) %}{% endfor %}{{ result | tojson }}"
+  software_version:
+    commands:
+      - command: "show version"
+        parser: "textfsm"
+        jpath: "[*].os"
