--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,8 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+      - name: "Pip install virtualenv to avoid issue with virtualenv --wheel"
+        run: "~/.local/share/pypoetry/venv/bin/pip install virtualenv==20.30.0"
       - name: "Constrain Nautobot version and regenerate lock file"
         env:
           INVOKE_NAUTOBOT_DEVICE_ONBOARDING_LOCAL: "true"
@@ -160,6 +162,8 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v6"
         with:
           poetry-version: "1.8.5"
+      - name: "Pip install virtualenv to avoid issue with virtualenv --wheel"
+        run: "~/.local/share/pypoetry/venv/bin/pip install virtualenv==20.30.0"
       - name: "Constrain Nautobot version and regenerate lock file"
         env:
           INVOKE_NAUTOBOT_DEVICE_ONBOARDING_LOCAL: "true"
