--- a/development/development.env
+++ b/development/development.env
@@ -40,3 +40,5 @@ MYSQL_ROOT_HOST=%
 
 # Use a less verbose log level for Celery Beat
 NAUTOBOT_BEAT_LOG_LEVEL=INFO
+
+NAUTOBOT_SSOT_HIDE_EXAMPLE_JOBS="False"
