fix bad merge part 2

--- a/development/development.env
+++ b/development/development.env
@@ -38,7 +38,7 @@ MYSQL_USER=${NAUTOBOT_DB_USER}
 MYSQL_DATABASE=${NAUTOBOT_DB_NAME}
 MYSQL_ROOT_HOST=%
 
+NAUTOBOT_SSOT_HIDE_EXAMPLE_JOBS="True"
+
 # Use a less verbose log level for Celery Beat
 NAUTOBOT_BEAT_LOG_LEVEL=INFO
-
-NAUTOBOT_SSOT_HIDE_EXAMPLE_JOBS="False"
