Added Analytics template override only to RTD docs build

--- a/.gitignore
+++ b/.gitignore
@@ -308,3 +308,5 @@ public
 /compose.yaml
 /dump.sql
 /nautobot_device_onboarding/static/nautobot_device_onboarding/docs
+# Avoid accidental commit of analytics template override generated via ./docs/insert-analytics.sh
+docs/assets/overrides/main.html
