--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ ttp = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "*"
-django-debug-toolbar = "*"
+django-debug-toolbar = "<6.0.0"
 invoke = "*"
 ipython = "*"
 pylint = "*"
