--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ nautobot = "^2.3.1"
 nautobot-ssot = "^3.0.0"
 nautobot-plugin-nornir = "^2.0.0"
 jdiff = ">=1.0.1,<2.0.0"
-ntc-templates = "^7.0.0"
+ntc-templates = ">=7.9.0,<9.0.0"
 # Netutils pin is needed for https://github.com/networktocode/netutils/pull/553
 netutils = "^1.9.1"
 ttp = "^0.9.0"
