FIX: remove default description for interfaces without description. 	modified:   nautobot_device_onboarding/command_mappers/f5_tmsh.yml

--- a/nautobot_device_onboarding/command_mappers/f5_tmsh.yml
+++ b/nautobot_device_onboarding/command_mappers/f5_tmsh.yml
@@ -172,7 +172,7 @@ sync_network_data:
       - command: "show net interface all-properties"
         parser: "ttp"
         jpath: '[]."{{ current_key }}".mac'
-        post_processor: "{{ 'no description' }}"
+        post_processor: "{{ '' }}"
   interfaces__link_status:
     commands:
       - command: "show net interface all-properties"
