--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
 ]
 packages = [
     { include = "nautobot_device_onboarding" },
@@ -26,7 +25,7 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.14"
+python = ">=3.10,<3.13"  # TODO: Update to <3.14 when Nautobot SSOT has been updated to support 3.13
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
 nautobot = {git = "https://github.com/nautobot/nautobot.git", rev = "next"}
