Set pylint-nautobot minimum so that it doesn't install really old
Poetry tries to install pylint 4, due to the pylint-nautobot 0.3.0 not having an upper bound for pylint.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ invoke = "*"
 ipython = "*"
 pylint = "*"
 pylint-django = "*"
-pylint-nautobot = "*"
+pylint-nautobot = ">=0.3.1"
 ruff = "0.5.5"
 yamllint = "*"
 toml = "*"
@@ -116,11 +116,6 @@ notes = """,
     FIXME,
     XXX,
     """
-
-[tool.pylint-nautobot]
-supported_nautobot_versions = [
-    "3"
-]
 
 [tool.ruff]
 line-length = 120
