Update lock and replace next with 3.0.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ toml = "*"
 pymarkdownlnt = "~0.9.30"
 Markdown = "*"
 towncrier = ">=23.6.0,<=24.8.0"
-fakenos = { git = "https://github.com/fakenos/fakenos", branch = "master" }
+fakenos = { git = "https://github.com/fakenos/fakenos", branch = "master", python = ">=3.11,<3.14" }
 to-json-schema = "*"
 jsonschema = "*"
 djlint = ">=1.36.4,<2.0.0"
