--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,7 +105,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.13"]
-        nautobot-version: ["next"]  # TODO: Change to 3.0.0 after v3.0.0 is released
+        nautobot-version: ["3.0.0"]
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
@@ -150,16 +150,16 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10"]  # 3.13 stable is tested in unittest_report stage.
+        python-version: ["3.11"]  # 3.13 stable is tested in unittest_report stage.
         db-backend: ["postgresql"]
-        nautobot-version: ["next"]  # TODO: Change to stable after v3.0.0 is released
+        nautobot-version: ["stable"]
         include:
-          # - python-version: "3.11"
-          #   db-backend: "postgresql"
-          #   nautobot-version: "3.0.0"  # TODO: Uncomment after v3.0.0 is released
+          - python-version: "3.11"
+            db-backend: "postgresql"
+            nautobot-version: "3.0.0"
           - python-version: "3.13"
             db-backend: "mysql"
-            nautobot-version: "next"  # TODO: Change to stable after v3.0.0 is released
+            nautobot-version: "stable"
     runs-on: "ubuntu-22.04"
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
@@ -207,7 +207,7 @@ jobs:
       matrix:
         python-version: ["3.13"]
         db-backend: ["postgresql"]
-        nautobot-version: ["next"]  # TODO: Change to stable after v3.0.0 is released
+        nautobot-version: ["stable"]
     runs-on: "ubuntu-latest"
     permissions:
       pull-requests: "write"
