--- a/invoke.example.yml
+++ b/invoke.example.yml
@@ -1,6 +1,6 @@
 ---
 nautobot_device_onboarding:
-  nautobot_ver: "next"  # TODO: Change to 3.0.0 after v3.0.0 is released
+  nautobot_ver: "3.0.0"
   python_ver: "3.12"
   # local: false
   # compose_dir: "/full/path/to/nautobot-app-device-onboarding/development"
