--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "5.0.0a2"
+version = "5.0.0"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -29,12 +29,9 @@ include = [
 python = ">=3.10,<3.14"
 napalm = ">=4.1.0, <6.0.0"
 zipp = "^3.4.0"
-nautobot = ">=3.0.0a2,<3.0.0rc99"
-# nautobot = "^3.0.0"  # TODO: Uncomment after v3.0.0 is released
-nautobot-ssot = ">=4.0.0a1,<4.0.0rc99"
-# nautobot-ssot = "^4.0.0"  # TODO: Uncomment after v4.0.0 is released
-nautobot-plugin-nornir = ">=3.0.0a1,<3.0.0rc99"
-# nautobot-plugin-nornir = "^3.0.0"  # TODO: Uncomment after v3.0.0 is released
+nautobot = ">=3.0.0,<4.0.0"
+nautobot-ssot = ">=4.0.0,<5.0.0"
+nautobot-plugin-nornir = ">=3.0.0,<4.0.0"
 jdiff = ">=1.0.1,<2.0.0"
 ntc-templates = "^7.0.0"
 # Netutils pin is needed for https://github.com/networktocode/netutils/pull/553
@@ -56,7 +53,7 @@ toml = "*"
 pymarkdownlnt = "~0.9.30"
 Markdown = "*"
 towncrier = ">=23.6.0,<=24.8.0"
-fakenos = { git = "https://github.com/fakenos/fakenos", branch = "master" }
+fakenos = { git = "https://github.com/fakenos/fakenos", branch = "master", python = ">=3.11,<3.14" }
 to-json-schema = "*"
 jsonschema = "*"
 djlint = ">=1.36.4,<2.0.0"
