--- a/development/Dockerfile-fakenos
+++ b/development/Dockerfile-fakenos
@@ -3,7 +3,7 @@
 # Accepts a desired Python version as build argument, default to 3.12
 ARG PYTHON_VER="3.12"
 
-FROM docker.io/python:${PYTHON_VER}-slim-bookworm
+FROM docker.io/python:${PYTHON_VER}-slim
 
 WORKDIR /usr/src/fakenos
 
