--- a/nautobot_device_onboarding/command_mappers/cisco_xe.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_xe.yml
@@ -102,9 +102,9 @@ sync_network_data:
         iterable_type: "str"
   interfaces__vrf:
     commands:
-      - command: "show ip interface"
+      - command: "show ip vrf interfaces"
         parser: "textfsm"
-        jpath: "[?interface=='{{ current_key }}'].{name:vrf}"
+        jpath: "[?interface=='{{ current_key | abbreviated_interface_name(addl_reverse_map={'VirtualPortGroup': 'Vi'}) }}'].{name:vrf}"
         post_processor: "{% if obj | length > 0 %}{{ obj[0] | key_exist_or_default('name') | tojson }}{% else %}{{ obj }}{% endif %}"
         iterable_type: "dict"
   interfaces__tagged_vlans:
